[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
# emergence = "1.0.2"
emergence = { path = "../../emergence" }
glam = "0.22.0"
itertools = "0.10.5"
lazy_fn = "1.0.1"
lazy_static = "1.4.0"
linkme = "0.3.6"
macro_rules_attribute = "0.1.3"

[features]
